--- a/KN02/cloud-init-db.yaml
+++ b/KN02/cloud-init-db.yaml
@@ -5,12 +5,11 @@ users: # Collection von Benutzern
     groups: users, admin # Gruppen definieren
     home: /home/ubuntu # Ort von home bestimmen
     shell: /bin/bash # Ort von shell bestimmen
-    lock_passwd: false # Passwort wird nicht gesperrt (Passwort regeln)
+    lock_passwd: false # Passwort Login erlauben
     plain_text_passwd: 'password' # Passwort erstellen  
 ssh_pwauth: true # Authorisierung einstellen
 disable_root: false # Regel für Root bestimment
 packages: # Collection von Packages
   - mariadb-server
 runcmd:
-  sudo mysql -sfu root -e "GRANT ALL ON *.* TO 'admin'@'%' IDENTIFIED BY
-  'password' WITH GRANT OPTION;"
+  - sudo mysql -sfu root -e "GRANT ALL ON *.* TO 'admin'@'%' IDENTIFIED BY 'password' WITH GRANT OPTION;"
