--- a/KN04/Cloud-init/cloud-init-db.yaml
+++ b/KN04/Cloud-init/cloud-init-db.yaml
@@ -17,3 +17,5 @@ runcmd:
   - sudo mysql -sfu root -e "GRANT ALL ON . TO 'admin'@'%' IDENTIFIED BY 'password' WITH GRANT OPTION;"  
   - sudo sed -i 's/127.0.0.1/0.0.0.0/g' /etc/mysql/mariadb.conf.d/50-server.cnf  
   - sudo systemctl restart mariadb.service
+addresses: 
+  - 172.31.0.26/24
